src/objects/Apttus_Config2__PriceListItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__RelatedAdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the related item price adjustment should be applied to.</description>
        <label>Related Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
                <value>
                    <fullName>Extended Price</fullName>
                </value>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>Unit Net Price</fullName>
                </value>
                <value>
                    <fullName>Average Unit Net Price</fullName>
                </value>
                <value>
                    <fullName>Net Unit Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedAdjustmentType__c</fullName>
        <description>The related item price adjustment type</description>
        <label>Related Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related price list item</description>
        <label>Related Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Related Price List Items</relationshipLabel>
        <relationshipName>RelatedPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedPercentAppliesTo__c</fullName>
        <description>Indicates the price field the percentage should be applied to</description>
        <label>Percent Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedPercent__c</fullName>
        <description>The list price expressed as a percentage of the related price list item</description>
        <label>Percent</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevRecPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the revenue recognition policy for the product or service</description>
        <label>Revenue Recognition Policy</label>
        <referenceTo>Apttus_Config2__RevRecPolicy__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevenueSplitPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order revenue split/merge policy</description>
        <inlineHelpText>ID of the associated order revenue split policy</inlineHelpText>
        <label>Revenue Split/Merge Policy</label>
        <referenceTo>Apttus_Config2__RevenueSplitPolicy__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPriceToBundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option price is rolled up to the bundle. Only applicable to product options.This field is deprecated. Use the Price Included in Bundle field instead.</description>
        <inlineHelpText>Indicates whether the quantity is auto updated when the default quantity field gets a new value</inlineHelpText>
        <label>Auto Update Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SalesOrderQuantity__c</fullName>
        <description>The Total quantity for which sales orders have already been created against the contract price list Item</description>
        <inlineHelpText>The Total quantity for which sales orders have already been created against the contract price list Item</inlineHelpText>
        <label>Sales Order Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The charge type sequence</description>
        <inlineHelpText>The charge type sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubType__c</fullName>
        <description>The price list item sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the price item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the price item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item is taxable</description>
        <inlineHelpText>Indicates whether the price item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The price list item type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UBARAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the unbilled A/R account rule</description>
        <inlineHelpText>ID of the unbilled A/R account rule</inlineHelpText>
        <label>Unbilled A/R Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Unbilled A/R Account</value>
            </filterItems>
            <infoMessage>Please select an Unbilled A/R Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Unbilled A/R Account)</relationshipLabel>
        <relationshipName>PriceListItemsUBAR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UBAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the unbilled deferred account rule</description>
        <inlineHelpText>ID of the unbilled deferred account rule</inlineHelpText>
        <label>Unbilled Deferred Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Unbilled Deferred Account</value>
            </filterItems>
            <infoMessage>Please select an Unbilled Deferred Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Unbilled Deferred Account)</relationshipLabel>
        <relationshipName>PriceListItemsUB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Agreement_Name__c</fullName>
        <formula>Apttus_Config2__PriceListId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Agreement_Number__c</fullName>
        <formula>Apttus_Config2__PriceListId__r.Project_Price_List_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Conditional_Price_Code__c</fullName>
        <description>Reference to the Rule code for conditional price</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the Rule code for conditional price</inlineHelpText>
        <label>Conditional Price Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Custom_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Floor_Price__c</fullName>
        <description>Floor Price for Price List Item</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Recommended_Price__c</fullName>
        <description>Recommended price for price list item</description>
        <label>Recommended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Standav_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standav Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracted__c</fullName>
        <label>Contracted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DS_Grouping_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Bundle_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the options of a bundle or the features of an item shall be hidden on the Customer Component.</inlineHelpText>
        <label>Hide Bundle Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for identifying the latest currency from salesitem EDP</description>
        <label>Master_Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Business_Group__c</fullName>
        <formula>TEXT(Apttus_Config2__ProductId__r.Business_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Item_Type__c</fullName>
        <formula>TEXT(Apttus_Config2__ProductId__r.NokiaCPQ_Item_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Portfolio__c</fullName>
        <formula>IF( TEXT(Apttus_Config2__PriceListId__r.PriceList_Type__c) == &apos;FN Direct&apos;,  Apttus_Config2__ProductId__r.Direct_Portfolio__c ,Apttus_Config2__ProductId__r.Portfolio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Price_Type__c</fullName>
        <formula>TEXT( Apttus_Config2__PriceListId__r.PriceList_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Category__c</fullName>
        <formula>TEXT(Apttus_Config2__ProductId__r.NokiaCPQ_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Classification__c</fullName>
        <formula>TEXT( Apttus_Config2__ProductId__r.NokiaCPQ_Classification2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_OEM__c</fullName>
        <formula>Apttus_Config2__ProductId__r.NokiaCPQ_OEM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product OEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_State__c</fullName>
        <formula>TEXT(Apttus_Config2__ProductId__r.NokiaCPQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Price__c</fullName>
        <label>Partner Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Price List Item</label>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>